# data_uploader

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_table.sql  docker-compose.yml  prestart.sh  pyproject.toml
uploader/: main.py
