[tool.poetry]
name = "data-uploader"
version = "0.1.0"
description = ""
authors = ["suer-tech <suer2505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
psycopg2 = "^2.9.9"
lxml = "^5.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
